# PNS

./: .gitignore  CLAUDE.md  LICENSE  README.md  SUBMISSION.md  Verification.md  discord.md  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json  vercel.json
.claude/: settings.json
.claude/commands/: portaldot.md
.github/workflows/: ci.yml
apps/web/: .env.example  next.config.js  package.json  server.mjs  tailwind.config.ts  vercel.json
apps/web/public/abis/: attestation.json  community.json  registrar.json  registry.json  resolver.json  reverse.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/components/: AttestationFeed.tsx  Avatar.tsx  BountyCard.tsx  HeaderSearch.tsx  HomeSearch.tsx  JudgementBadge.tsx  NameInput.tsx  NameResultCard.tsx  Notice.tsx  RecordEditor.tsx  RecordRow.tsx  RoleBadge.tsx  SampleProfileCard.tsx  SubnamesPanel.tsx  WalletConnect.tsx
apps/web/src/context/: WalletContext.tsx
apps/web/src/hooks/: usePNSClient.ts  useWallet.ts
apps/web/src/lib/: chain-config.ts  (+3 more)
contracts/: workspace.Cargo.toml
contracts/attestation/: Cargo.toml  lib.rs
contracts/community/: Cargo.toml  lib.rs
contracts/registrar/: Cargo.toml  lib.rs
contracts/registry/: Cargo.toml  lib.rs
contracts/resolver/: Cargo.toml  lib.rs
contracts/reverse/: Cargo.toml  lib.rs
docs/: architecture.md  chain-verified.md  demo-script.md  portaldot-vs-pns.md
scripts/: chain-verify.ts  debug-attest.ts  debug-register.ts  debug-save-profile.ts  debug2.ts  demo-seed.ts  deploy.ts  probe-identity.mjs  start-node.sh
(+16 files in other folders)
